# simplicio-mapper

./: .agentic-starter.json  .gitignore  .llm-project-mapper.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  GOAL_RESULT.md  INIT.en.md  INIT.md  INSTALL.en.md  INSTALL.md  PRIVACY.md  PROGRESS.md  PYPI.md  README.md  README.pt-BR.md  SHOWCASE.md  SIMPLICIO_INTEGRATION.md  YOOL_TUPLE_HAMT.md  _BOOTSTRAP.md  bootstrap.ps1  bootstrap.sh  package-lock.json  package.json  pyproject.toml
.agents/: README.md  ralph-loop.agent.md
.catalog/: README.md
.claude/: settings.json
.claude/hooks/: session-start-skills.ps1  session-start-skills.sh
.codex/: config.toml  hooks.json
.codex/hooks/: pre-commit.ps1  pre-commit.sh  session-start-skills.ps1
.github/: PSScriptAnalyzerSettings.psd1  copilot-instructions.md
.github/workflows/: ci.yml  docs-site.yml  dod.yml  publish-npm.yml  publish-pypi.yml  scaffold-self-check.yml
.github/workflows-templates/: README.md  llm-project-mapper-init.yml  telemetry-worker.js
.simplicio/: precedent-index.json  project-map.json
.skills/: NOTICE.md  README.md
.skills/ralph-loop/: SKILL.md
.skills/rtk-cli/: SKILL.md
.skills/skillopt/: SKILL.md  example.skill.md  example.suite.json
.skills/website-to-hyperframes/: SKILL.md
.specs/architecture/: ADR-002-python-rust-hybrid.md
.specs/product/: DOMAIN.md  PERSONAS.md  VISION.md
.specs/sprints/: BACKLOG.md
.specs/workflow/: CONTRIBUTING.md  RELEASE.md
docs/: YOOL_TUPLE_HAMT.md  architecture-map.md  domain-map.md  local-setup.md  placeholders.md  sessionstart-hook.md  troubleshooting.md
docs-site/: README.md  docusaurus.config.cjs  package-lock.json  package.json
docs-site/docs/: intro.md
docs/api-examples/: README.md  cli.md  graphql.md  rest.md  webhook.md
docs/evidence/: README.md
docs/features/: README.md  login.md
presentation/: conceitos.md  slides.md
projects/: README.md
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: lib.rs
scripts/: README.md  build_hamt.py  check-placeholders.sh  coverage.js  evidence.ps1  evidence.sh  lint.js  start.ps1  start.sh  sync-docs-site.mjs  test.ps1  test.sh
scripts/skillopt/: engine.js
simplicio_mapper/: __init__.py  _native.py  cache.py  cli.py  mapper.py  models.py
tests/e2e/: README.md  build-hamt-catalog.spec.ts  cli.spec.ts  example.spec.ts  skillopt.spec.ts  smoke.spec.ts
tests/python/: test_cli.py  test_native.py
tests/unit/: build-hamt-catalog.test.js  cli-args.test.js  cli-install.test.js  cli-telemetry.test.js  docs-site.test.js  mapping-artifacts.test.js  overlay-docs.test.js  skillopt.test.js  why-video-narration.test.js
video/: README.md  TTS-EVALUATION.md  package-lock.json  package.json
video/scripts/: generate-why-voiceover.mjs  regression.mjs
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
(+60 files in other folders)
