[package]
name = "simplicio_mapper_rs"
version = "0.1.0"
edition = "2021"
description = "PyO3 acceleration crate for simplicio-mapper (hashing + parsing hot paths)"
license = "MIT"

[lib]
name = "simplicio_mapper_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
sha2 = "0.10"
regex = "1.10"
once_cell = "1.19"
