[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "simplicio-mapper-rs"
version = "0.1.0"
description = "Optional Rust acceleration crate for simplicio-mapper (PyO3 bindings)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "simplicio_mapper_rs"
features = ["pyo3/extension-module"]
strip = true
